# hsledge

./: LICENSE  README.md  setup.cfg
.github/workflows/: gh-pages.yml  python-publish.yml
src/hsledge/: __init__.py
tests/ds/real/: Alpha_Bank_raw.csv  Balance_Scale_bin.csv  Balance_Scale_raw.csv  Balloons_bin.csv  Balloons_raw.csv  Breast_Cancer_UCI_bin.csv  Breast_Cancer_UCI_raw.csv  Car_Evaluation_bin.csv  Car_Evaluation_raw.csv  Categorical_Features_Indian_Diabetes_bin.csv  Categorical_Features_Indian_Diabetes_raw.csv  Chess_bin.csv  Chess_raw.csv  Chikungunya_bin.csv  Chikungunya_raw.csv  Congressional_Voting_Records_bin.csv  Congressional_Voting_Records_raw.csv  Hayes_Roth_bin.csv  Hayes_Roth_raw.csv  Lenses_bin.csv  Lenses_raw.csv  Lymphography_bin.csv  Lymphography_raw.csv  MONKs_Problems_bin.csv  MONKs_Problems_raw.csv  Mushroom_bin.csv  Mushroom_raw.csv  Nursery_bin.csv  Nursery_raw.csv  SPECT_Heart_bin.csv  SPECT_Heart_raw.csv  Students_Adapt_bin.csv  Students_Adapt_raw.csv  Survey_Lung_Cancer_bin.csv  Survey_Lung_Cancer_raw.csv  Tic_Tac_Toe_Endgame_bin.csv  Tic_Tac_Toe_Endgame_raw.csv  Website_Phishing_bin.csv  Website_Phishing_raw.csv  _metadata.csv
tests/ds/synth/: wSLEDge_BIN_SYNTH_DS_results2analyze_1031.csv  wSLEDge_BIN_SYNTH_DS_results2analyze_1063.csv  wSLEDge_BIN_SYNTH_DS_results2analyze_1155.csv  wSLEDge_BIN_SYNTH_DS_results2analyze_1244.csv  wSLEDge_BIN_SYNTH_DS_results2analyze_158.csv  wSLEDge_BIN_SYNTH_DS_results2analyze_164.csv  wSLEDge_BIN_SYNTH_DS_results2analyze_1839.csv  wSLEDge_BIN_SYNTH_DS_results2analyze_2476.csv  (+42 more)
