[metadata]
name = hsledge
version = 1.0.0
author = R. Douglas G. de Aquino
author_email = aquinordga@gmail.com
description = HammerSLEDge: Support, Length, Exclusivity and Difference Weigthed for Group Evaluation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://aquinordg.github.io/hsledge
project_urls =
    Bug Tracker = https://github.com/aquinordg/hsledge/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    pandas
    numpy

[options.packages.find]
where = src
